--- a/src/crafts.html
+++ b/src/crafts.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://russiancrafts.adc.ac/share/crafts.png"
+      content="https://russiancrafts.adc.ac/share/share.png"
     />
 
     <!-- Twitter -->
@@ -38,19 +38,19 @@
     />
     <meta
       property="twitter:image"
-      content="https://russiancrafts.adc.ac/share/crafts.png"
+      content="https://russiancrafts.adc.ac/share/share.png"
     />
 
     <analytics></analytics>
   </head>
   <body>
     <div class="O_Header">
-      <div class="M_Header">
+      <div class="M_HeaderNav">
         <a class="A_Logo" href="/">Ремёсла России</a>
-        <div class="C_HeaderNav">
-          <a class="A_HeaderSections" href="./crafts.html">Библиотека</a>
-          <a class="A_HeaderSections" href="./map.html">Карта</a>
-          <a class="A_HeaderSections" href="./articles.html"
+        <div class="C_HeaderNavSections">
+          <a class="A_HeaderSection" href="./crafts.html">Библиотека</a>
+          <a class="A_HeaderSection" href="./map.html">Карта</a>
+          <a class="A_HeaderSection" href="./articles.html"
             >Статьи и подборки</a
           >
         </div>
@@ -59,8 +59,8 @@
 
     <section class="S_CraftsBody">
       <div class="O_CraftsTitleFilter">
-        <h1 class="A_SectionTitles">Библиотека ремёсел</h1>
-        <div class="M_CraftsTagButtons">
+        <h1 class="A_SectionTitle -Crafts">Библиотека ремёсел</h1>
+        <div class="C_CraftsTagButtonsShort">
           <div class="A_TagButton" data-tags="Роспись">роспись</div>
           <div class="A_TagButton" data-tags="Кость">кость</div>
           <div class="A_TagButton" data-tags="Металл">металл</div>
@@ -71,152 +71,128 @@
             глина (керамика)
           </div>
           <div class="A_TagButton" data-tags="Вышивка">вышивка</div>
-          <div class="A_TagOptionsText">все тэги</div>
+          <div class="A_TagOptionsTextShow">все тэги</div>
         </div>
       </div>
 
       <div class="C_CraftsCards">
         <a
           class="M_CraftsCard"
-          data-tags="Кость, Резьба"
+          data-tags="Кость,Резьба"
           href="./crafts/uelen-bone-carving.html"
         >
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Uelen-bone-carving.png"
-              alt="Уэленская резьба по кости"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Uelen-bone-carving.jpg"
+            alt="Уэленская резьба по кости"
+          />
           <p class="A_CraftsCardTitle">Уэленская резьба по&nbsp;кости</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Роспись" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Gorodets-painting.png"
-              alt="Городецкая роспись"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Gorodets-painting.jpg"
+            alt="Городецкая роспись"
+          />
           <p class="A_CraftsCardTitle">Городецкая роспись</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Роспись" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Mezen-painting.png"
-              alt="Мезенская роспись"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Mezen-painting.jpg"
+            alt="Мезенская роспись"
+          />
           <p class="A_CraftsCardTitle">Мезенская роспись по&nbsp;дереву</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Глина (керамика)" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Petrovsky-toy.png"
-              alt="Петровская игрушка"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Petrovsky-toy.jpg"
+            alt="Петровская игрушка"
+          />
           <p class="A_CraftsCardTitle">Петровская игрушка</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Текстиль" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Vologda-lace.png"
-              alt="Вологодское кружево"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Vologda-lace.jpg"
+            alt="Вологодское кружево"
+          />
           <p class="A_CraftsCardTitle">Вологодское кружево</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Роспись" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Vologda-khokhloma.png"
-              alt="Вологодская хохлома"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Vologda-khokhloma.jpg"
+            alt="Вологодская хохлома"
+          />
           <p class="A_CraftsCardTitle">Вологодская хохлома</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Роспись" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Rakul-painting.png"
-              alt="Ракульская роспись"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Rakul-painting.jpg"
+            alt="Ракульская роспись"
+          />
           <p class="A_CraftsCardTitle">Ракульская роспись</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Роспись" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Volkhov-painting.png"
-              alt="Волховская роспись"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Volkhov-painting.jpg"
+            alt="Волховская роспись"
+          />
           <p class="A_CraftsCardTitle">Волховская роспись</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Глина (керамика)" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Skopinsk-ceramics.png"
-              alt="Cкопинская керамика"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Skopinsk-ceramics.jpg"
+            alt="Cкопинская керамика"
+          />
           <p class="A_CraftsCardTitle">Cкопинская керамика</p>
         </a>
 
         <a class="M_CraftsCard" data-tags="Текстиль" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Tabasaran-carpet.png"
-              alt="Табасаранские ковры"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Tabasaran-carpet.jpg"
+            alt="Табасаранские ковры"
+          />
           <p class="A_CraftsCardTitle">Табасаранские ковры</p>
         </a>
 
         <a class="M_CraftsCard" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Filimonov-toy.png"
-              alt="Филимоновская игрушка"
-            />
-          </div>
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Filimonov-toy.jpg"
+            alt="Филимоновская игрушка"
+          />
           <p class="A_CraftsCardTitle">Филимоновская игрушка</p>
         </a>
 
-        <a class="M_CraftsCard" data-tags="Кость, Резьба" href="#">
-          <div class="A_CraftsCardPic">
-            <img
-              class="Q_CardImages"
-              src="images/crafts/Kholmogory-bone-carving.png"
-              alt="Холмогорская резная кость"
-            />
-          </div>
+        <a class="M_CraftsCard" data-tags="Кость,Резьба" href="#">
+          <img
+            class="A_CraftsCardPic"
+            src="images/crafts/Kholmogory-bone-carving.jpg"
+            alt="Холмогорская резная кость"
+          />
           <p class="A_CraftsCardTitle">Холмогорская резная кость</p>
         </a>
       </div>
     </section>
 
     <div class="O_Footer">
-      <div class="M_Footer">
-        <div class="A_FooterSections">
+      <div class="M_FooterNav">
+        <div class="A_FooterSection">
           <a href="#">О проекте</a>
         </div>
         <div class="C_FooterIconsSocialNetwork">
