--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
+    <link rel="icon" href="../favicon.ico" />
     <meta charset="utf-8" />
 
     <!-- Primary Meta Tags -->
@@ -27,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://russiancrafts.adc.ac/share/crafts/uelen-bone-carving.png"
+      content="https://russiancrafts.adc.ac/share/share.png"
     />
 
     <!-- Twitter -->
@@ -46,7 +47,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://russiancrafts.adc.ac/share/crafts/uelen-bone-carving.png"
+      content="https://russiancrafts.adc.ac/share/share.png"
     />
 
     <analytics></analytics>
@@ -54,12 +55,12 @@
 
   <body>
     <div class="O_Header">
-      <div class="M_Header">
+      <div class="M_HeaderNav">
         <a class="A_Logo" href="/">Ремёсла России</a>
-        <div class="C_HeaderNav">
-          <a class="A_HeaderSections" href="../crafts.html">Библиотека</a>
-          <a class="A_HeaderSections" href="../map.html">Карта</a>
-          <a class="A_HeaderSections" href="../articles.html"
+        <div class="C_HeaderNavSections">
+          <a class="A_HeaderSection" href="../crafts.html">Библиотека</a>
+          <a class="A_HeaderSection" href="../map.html">Карта</a>
+          <a class="A_HeaderSection" href="../articles.html"
             >Статьи и подборки</a
           >
         </div>
@@ -74,22 +75,24 @@
       />
 
       <div class="W_CraftLeadTitleDescription">
-        <div class="A_CraftLeadTitle -Uelen-bone-carving">
-          <h1 class="Q_CraftLeadTitleText">Уэленская резьба по&nbsp;кости</h1>
-        </div>
+        <h1 class="A_CraftLeadTitle -Uelen-bone-carving">
+          Уэленская резьба по&nbsp;кости
+        </h1>
+
         <div class="M_CraftLeadDescription">
-          <div class="W_CraftLeadDescriptionMap">
-            <div class="Q_Icon -Map -size48x48"></div>
+          <a class="W_CraftLeadDescriptionMap" href="../map.html"
+            ><div class="Q_Icon -MapPoint -size48x48"></div>
             <p class="A_CraftLeadDescriptionLocation">
               село Уэлен, Чукотка, ДВФО
-            </p>
-          </div>
+            </p></a
+          >
           <div class="C_CraftLeadDescriptionTags">
-            <div class="A_TagButtonArticle">кость</div>
-            <div class="A_TagButtonArticle">резьба</div>
+            <a class="A_TagButtonArticle" href="../crafts.html">кость</a>
+            <a class="A_TagButtonArticle" href="../crafts.html">резьба</a>
           </div>
         </div>
       </div>
+      <div class="A_BackButton">&larr; назад</div>
     </div>
 
     <div class="S_CraftPage">
@@ -233,14 +236,17 @@
 
         <div class="M_CraftBodyList">
           <h2 class="A_CraftBodySubtitle">Где можно увидеть</h2>
-          <ul class="A_CraftBodyListItems">
-            <li class="Q_CraftBodyListItem">
+
+          <ul class="C_CraftBodyListItems">
+            <li class="A_CraftBodyListItem">
               <a href="#">Музей (с краткой информацией и ссылкой)</a>
             </li>
-            <li class="Q_CraftBodyListItem">
+
+            <li class="A_CraftBodyListItem">
               <a href="#">Музей (с краткой информацией и ссылкой)</a>
             </li>
-            <li class="Q_CraftBodyListItem">
+
+            <li class="A_CraftBodyListItem">
               <a href="#">Мастерская (с краткой информацией и ссылкой)</a>
             </li>
           </ul>
@@ -306,7 +312,7 @@
 
           <div class="W_CraftPageEnd">
             <div class="M_CraftEndTags">
-              <h2 class="A_CraftBodySubtitle -Padd0">Тэги:</h2>
+              <h2 class="A_CraftBodySubtitle">Тэги:</h2>
               <p class="A_CraftEndTagsSearch">
                 <span><a href="#">кость</a></span
                 >, <span><a href="#">резьба</a></span>
@@ -334,8 +340,8 @@
     </div>
 
     <div class="O_Footer">
-      <div class="M_Footer">
-        <div class="A_FooterSections">
+      <div class="M_FooterNav">
+        <div class="A_FooterSection">
           <a href="#">О проекте</a>
         </div>
         <div class="C_FooterIconsSocialNetwork">
